compile all modules to a single file

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <script src="./node_modules/systemjs/dist/system.js"></script>
-    <script>
-        SystemJS.import('./js/system-config.js');
-    </script>
+    <script src="./dist/js/main.js"></script>
 </body>
 
 </html>
