--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="./main.css" rel="stylesheet" type="text/css">
 </head>
 
+
 <body>
-    <script src="./dist/js/main.js"></script>
+    <script src="./node_modules/systemjs/dist/system.js"></script>
+    <script src="./systemjs.config.js"></script>
+    <script>
+        SystemJS.import('app');
+    </script>
+
 </body>
 
 </html>
