--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
 
 
 <body>
-    <header>
-        <ul class="list-inline">
-            <li class="list-inline-item">Lorem ipsum</li>
-            <li class="list-inline-item">Phasellus iaculis</li>
-            <li class="list-inline-item">Nulla volutpat</li>
-        </ul>
-    </header>
+    <div id='app-main'></div>
     <script src="./node_modules/systemjs/dist/system.js"></script>
     <script src="./systemjs.config.js"></script>
     <script>
