--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>test</title>
-<link href="/main.c93c1ab995d2862546da17567ca0bf71.css" rel="stylesheet"></head>
+</head>
 <body>
     <div id='app-main'></div>
-<script type="text/javascript" src="/bundle.js"></script></body>
+</body>
 </html>
